--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,17 @@
 
 @font-face {
   font-family: 'Bakerville'
-  src: url
+  src: url(../fonts/Baskerville.ttc);
 }
 
 /* link the web font used for the level 1 heading here */
 
 /*////////// Global Styles //////////*/
+
+*{
+  padding: 0;
+  margin: 0;
+}
 
 body {
 	background: #F3EBE9;
@@ -23,3 +28,21 @@ body {
 }
 
 /* Write all remaining styles here */
+
+h1 {
+  padding-bottom: 10px;
+  margin: 0 0 5px;
+  font-size: 5em;
+  font-weight: normal;
+  font-family: 'Bakerville', serif;
+  border-bottom: 1px solid #ccc;
+}
+
+h2 {
+  color: rgb(111, 127, 122);
+  font-size: 2em;
+}
+
+p {
+  
+}
